# hr-certflow

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  hr-scenario-evidence.yml  promote-existing-image.yml  release.yml  shared-k3s-smoke.yml
ai-workflows/: README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: audit.py  certificate_types.py  certificates.py  dashboard.py  documents.py  employees.py  health.py  internal.py  me.py  reminders.py  reports.py  reviews.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/domain/: enums.py
backend/app/models/: __init__.py  hr.py
backend/app/schemas/: certificates.py  common.py  dashboard.py  documents.py  employees.py  reminders.py  reports.py
backend/app/services/: audit.py  certificates.py  dify.py  extraction.py  notifications.py  recognition_service.py  reminder_service.py  review_service.py  storage.py
backend/app/smoke/: __init__.py  celery_redis_isolation.py
backend/app/tasks/: documents.py  probe.py  reminders.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_pending_upload_document_status.py  0003_add_employee_certificate_guardrail_indexes.py  0004_add_reminder_event_success_idempotency.py  0005_add_certificate_type_required_flag.py  0006_add_audit_actor_source.py
backend/tests/: test_audit_context.py  test_audit_list_filter.py  test_auto_create_tables_guard.py  test_calendar_months.py  test_celery_settings.py  test_certificate_guardrails.py  test_certificate_trace.py  test_collect_hr_scenario_evidence.py  test_dashboard.py  test_data_operations.py  test_dify.py  test_document_trace.py  test_documents.py  test_extraction.py  test_health.py  test_internal_health.py  test_master_data_trace.py  test_me.py  test_recognition_service.py  test_recognize_async.py  test_reminder_scan_route.py  test_reminder_service_unit.py  test_reminder_workflows.py  test_reports.py  test_review_trace.py  test_review_workflows.py  test_storage.py  test_trusted_proxy.py
docs/: architecture.md  delivery-gap-register.md  delivery-north-star.md  engineering-baseline.md  external-services.md  project-overview.md  release-runbook.md  remediation-backlog.md  shared-k3s-onboarding.md
frontend/: .dockerignore  .eslintrc.cjs  .stylelintrc.cjs  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
scripts/: collect_hr_scenario_evidence.py  run_k8s_celery_smoke.py  smoke_api_probe.py  smoke_celery_redis_isolation.py  smoke_http.py  update_gitops_image_tags.py  validate_deploy_artifacts.py  wait_k8s_rollout.py
(+46 files in other folders)
