[project]
name = "hr-certflow-backend"
version = "0.1.0"
description = "FastAPI backend for HR certificate workflow management"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "boto3>=1.35.0",
    "celery[redis]>=5.4.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "psycopg[binary]>=3.2.2",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.12",
    "redis>=5.1.0",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "ty>=0.0.34",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
