[project]
name = "hr-certflow-backend"
version = "0.1.0"
description = "FastAPI backend for HR certificate workflow management"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "boto3>=1.43.29",
    "celery[redis]>=5.6.3",
    "email-validator>=2.2.0",
    "fastapi>=0.137.0",
    "httpx>=0.27.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "redis>=5.1.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
